fix: vertical scrollbars in mathjax formulas

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1550,6 +1550,6 @@ figure.cover {
   }
 }
 
-mjx-container[jax="CHTML"][display="true"] {
-  overflow-x: auto;
-}
+//mjx-container[jax="CHTML"][display="true"] {
+//  overflow-x: auto;
+//}
